Mon Feb 10 09:51:23 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* src/findreplace.c (find_next_cb, find_prev_cb, replace_next_cb): 
	made "String was not found\n" translatable (#103610).

2003-01-29  Jaka Mocnik  <jaka@gnu.org>

	* src/gnome-print-font-*: code rip from gedit: dialog and picker
	for print fonts.
	* src/Makefile.am: add above to compilation.
	* src/preferences.c: use the above.
	this patch was submitted by Shivram U.

2003-01-28  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added Arabic (ar) to ALL_LINGUAS, fixed
	  libgnomeprint-2.2 requirement

2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Azeri (az) file

2003-01-12  Jaka Mocnik  <jaka@gnu.org>

	* help/C/ghex-C.omf, help/ja/ghex-ja.omf: fixed identifier url. patch
	by Artur Flinta.

2003-01-06  Jaka Mocnik  <jaka@gnu.org>

	* applied a patch from frederic crozat that makes ghex use
	libgnomeprintui 2.2 instead of 2.0.
	* configure.in: bumped version to 2.2.0; tagged as GHEX_2_2_0.

2003-01-06  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c (close_cb): fixed a possible crash.
	* src/gtkhex.c: enabled pasting of primary selection with
	middle mouse button. move cursor properly after cutting or
	pasting data.
	* configure.in: bumped version to 2.0.0; tagged as GHEX_2_0_0;
	branch ghex-2-0.
	* src/preferences.c (set_prefs): set display font.
	* src/access/accessiblegtkhex.c (accessible_gtk_hex_real_initialize): 
	applied patch from padraig o'briain. fixes #101136.

2002-12-23  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: bumped version to 1.99.90; tagged as GHEX_1_99_90.
	* src/gtkhex.c: use colors from widget styles to ensure text
	visibility when using high-contrast, accessible themes. initial
	patch was kinldy provided by Pasupathi Duraisamy of Wipro. thanx!
	* src/gtkhex.h (struct _GtkHexClass): removed colormap and cursor
	color members.

2002-11-24  Jaka Mocnik  <jaka@gnu.org>

	* src/hex-document.c, src/ui.c: applied patch from Hideoshi