@@ -1,3 +1,9 @@
+2003-02-15  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/session.c: applied a patch from Pasupathi Duraisamy that
+	prompts the user if logout is performed when changed files are
+	still open.
+	
 Mon Feb 10 09:51:23 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>
 
 	* src/findreplace.c (find_next_cb, find_prev_cb, replace_next_cb): 
